2001-03-29  Larry Jones  <larry.jones@sdrc.com>

	* client.c (connect_to_pserver, start_tcp_server): Add IP address
	to connect failed message.
	(connect_to_forked_server, connect_to_pserver, start_tcp_server): Add
	trace messages ala start_rsh_server.
	(start_rsh_server): Include entire command in trace message for
	START_RSH_WITH_POPEN_RW like ! START_RSH_WITH_POPEN_RW does.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh: Global search & replace ${TESTDIR}/cvsroot with
	${CVSROOT_DIRNAME} for consistency.

2001-03-29  Derek Price  <dprice@collab.net>

	* sanity.sh (conflicts-12[68].5): Remove sanity hack which has allowed
	for a CVS bug since May 96/97.  Not sure when the bug went bye-bye, but
	the tests broke when $TESTDIR != $TMPPWD.

2001-03-26  Larry Jones  <larry.jones@sdrc.com>

	* classify.c (Classify_File): Don't report a conflict for a removed
	file when piping.  Also simplify the code structure.
	(Reported by Milos Kleint <milos.kleint@netbeans.com>.)
	* sanity.sh (rmadd2-14[abc]): New tests for above.

2001-03-24  Noel Cragg  <noel@shave.cnet.com>

	* diff.c: mods to allow `-T' and `-y' options to be passed through
	to the diff library.  This wasn't allowed earlier because of a
	similarly named options that got passed through to the old rcs
	programs.  We've long since stopped sending `-T' to any rcs
	utility and have never used `-y'.  Any users of moldly CVS
	versions which used to support `-T' have (hopefully) upgraded to
	one where that option isn't supported.  It seems reasonable to
	enable them again and pass them through.  (sanity.sh still works
	anyways...)
	(longopts): add short option equivalents for --initial-tab and
	--side-by-side.
	(diff): add new short options to getopt string and switch
	statement.

2001-03-22  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Add check for ${DOTSTAR} with large matches.

2001-03-23  Derek Price  <dprice@collab.net>

	* sanity.sh: Do the same as below for $keep.
